Update View Buttons

--- a/Managment/Views/Project/Update.cshtml
+++ b/Managment/Views/Project/Update.cshtml
@@ -181,10 +181,12 @@
                     </div>
                     <br />
                     <div class="row">
-                        <button id="submitBtn" style="border-radius:10px;padding:10px;" class="btn btn-primary" type="button">Update</button>
-                        <button id="cancelBtn" style="border-radius:10px;margin-top:12px; padding:10px;margin-bottom:-40px;" type="button">
-                            Cancel
-                        </button>
+                        <div class="col-lg-6">
+                            <button style="width:100%" id="cancelBtn" style="border-radius:10px;margin-top:12px; padding:10px;margin-bottom:-40px;" type="button" class="btn btn-secondary">Cancel</button>
+                        </div>
+                        <div class="col-lg-6">
+                            <button style="width:100%" id="submitBtn" style="border-radius:10px;padding:10px;" class="btn btn-primary" type="button">Update</button>
+                        </div>
                     </div>
                 </div>
             </div>
