--- a/Managment/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Managment/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -2,5 +2,12 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Layout = "_Layout";
 }
-<p>Email sent SuccessFully! Check Your Email</p>
+<h1>Email sent SuccessFully! Check Your Email</h1>
+
+<div id="imgId">
+<img class="img-fluid" src="https://storage.googleapis.com/gweb-uniblog-publish-prod/original_images/undo_send_hero.gif" /> 
+    @* <img  src="https://i.gifer.com/origin/dc/dc76c3ec57eb149c33de9f475f4fa647_w200.gif" /> *@
+</div>
+
