--- a/Managment/Views/Project/Add.cshtml
+++ b/Managment/Views/Project/Add.cshtml
@@ -45,7 +45,7 @@
 <h1 style="margin-left: 301px">Create New Project Here</h1>
 
 <div class="container-fluid" style="margin-top: 50px;">
-    <div class="container" style="border: 2px solid #ccc; padding: 20px; border-radius: 10px; background-color: #FFFDF9;">
+    <div class="container" style="border: 2px solid #ccc; padding: 20px; border-radius: 10px;">
         <form id="formData">
             <div class="col-md-12 mb-4" style="margin-top: 55px;">
                 <div class="row no-gutters" style="margin-top: -50px;margin-bottom: 40px;">
